# MyAgent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  INTERFACES.md  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backend/app/: __init__.py  agent_activity.py  agent_profiles.py  agent_store.py  analysis.py  config.py  conversation_context.py  deep_agent_runtime.py  intent.py  main.py  memory.py  memory_admin.py  model_provider.py  orchestrator.py  permissions.py  reasoning_trace.py  runner.py  runtime.py  schemas.py  settings.py  storage.py  task_titles.py  tools.py
backend/app/agent/: config.py  factory.py  middleware.py  profiles.py
backend/app/api/: artifacts.py  deps.py  files.py  models.py  skills.py  streaming.py  tasks.py
backend/app/backend/: composite.py  store.py
backend/app/contracts/: __init__.py  context.py  events.py  execution.py  harness.py  resources.py  security.py  session.py
backend/app/execution/: __init__.py  resources.py
backend/app/harness/: __init__.py  context_manager.py  engine.py  gateway.py  scheduler.py
backend/app/models/: deepseek_thinking.py  provider.py  registry.py
backend/app/runner/: core.py  events.py  lifecycle.py
backend/app/security/: __init__.py  scanner.py
backend/app/session/: __init__.py  projector.py
backend/app/skills/: loader.py  project.py  registry.py
backend/app/streaming/: event_converter.py  projector.py  sse.py  v2_adapter.py
backend/app/subagents/: definitions.py  registry.py
backend/app/tools/: filesystem_bridge.py  registry.py  searxng_search.py  tavily_search.py
backend/skills/code_review/: SKILL.md
backend/skills/web_research/: SKILL.md
backend/tests/: conftest.py  fakes.py  test_workflow.py
backend/tests/analysis/: test_defensive_access.py
backend/tests/e2e/: test_streaming_e2e.py
backend/tests/integration/: test_agent_build.py  test_postgres_memory_storage.py
backend/tests/runtime/: test_agent_activity.py  test_context_manager.py  test_deep_agent_runtime.py  test_execution_gateway.py  test_harness_skeleton.py  test_intent_router.py  test_model_provider_event_loop.py  test_reasoning_trace.py  test_resource_refs.py  test_runtime_pipe_deadlock.py  test_session_contracts.py  test_settings.py  (+2 more)
(+227 files in other folders)
