[project]
name = "myagent-backend"
version = "0.2.0"
description = "DeepAgents-powered universal agent platform with FastAPI backend."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "python-multipart>=0.0.26,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "langchain>=0.3",
  "langgraph>=0.3",
  "deepagents>=0.5",
  "langchain-openai>=0.3",
  "langchain-anthropic>=0.3",
  "langchain-deepseek>=0.1",
  "tavily-python>=0.5",
]

[dependency-groups]
dev = [
  "mypy>=1.14.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --capture=tee-sys"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "B904", "E501", "UP017"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
