[project]
name = "myagent-backend"
version = "0.2.0"
description = "DeepAgents-powered universal agent platform with FastAPI backend."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "python-multipart>=0.0.27,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.0,<3.0.0",
  "langchain>=0.3,<2.0.0",
  "langgraph>=0.3,<2.0.0",
  "deepagents>=0.5,<2.0.0",
  "langchain-openai>=0.3,<2.0.0",
  "langchain-anthropic>=0.3,<2.0.0",
  "langchain-deepseek>=0.1,<2.0.0",
  "tavily-python>=0.5,<1.0.0",
  "langgraph-checkpoint",
  "psycopg[binary]>=3.2,<4.0",
]

[dependency-groups]
dev = [
  "mypy>=1.14.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --capture=tee-sys"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "B904", "E501", "UP017"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.uv.sources]
langgraph-checkpoint = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/checkpoint", rev = "2e5025ec1ac8d435840ed4a972097de87aaa2eab" }
